--- a/src/app/game-container/game-container.html
+++ b/src/app/game-container/game-container.html
@@ -1,11 +1,11 @@
 <div class="main">
-  <div class="game-listing-container max-h[265px] overflow-x-auto block h-[265px] ">
+  <div class="game-listing-container max-h[265px] overflow-x-auto block h-[265px] lg:hidden md:hidden">
     <div class="app-markets">
       <div class="game-listing-container overflow-x-auto">
         <a class="first-element text-black overflow-y-auto text-[12px] leading-[18px]">
         </a>
         <div class="game-list bg-[#f1f5f8] border-b border-[#d6d8d7] px-3 py-1.5 ">
-          <div class="row m-x-[-5px] flex flex-wrap">
+          <div class="row m-x-[-5px] flex flex-wrap ">
             <div class="para flex flex-col w-[277.333px]">
               <p class="mb-0 game-name text-[12px]"><strong>Afghanistan U19 v Nepal U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
